[metadata]
name = swmm-api
version = attr: swmm_api.__version__

url = https://gitlab.com/markuspichler/swmm_api
project_urls =
    Documentation = https://markuspichler.gitlab.io/swmm_api
    Changelog = https://gitlab.com/markuspichler/swmm_api/-/blob/master/CHANGES.md

license = MIT
license_files =
    LICENSE
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = US-EPA-SWMM python interface
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Hydrology
    Intended Audience :: Science/Research

keywords =
    swmm
    environment
    civil_engineering
    api

[options]
python_requires = >= 3.7
include_package_data = True
packages =
    swmm_api
    swmm_api.report_file
    swmm_api.output_file
    swmm_api.input_file
    swmm_api.hotstart_file
    swmm_api._io_helpers
    swmm_api.run_swmm
    swmm_api.input_file.sections
    swmm_api.input_file.misc
    swmm_api.input_file.macro_snippets
    swmm_api.input_file.macros
install_requires =
    numpy
    pandas
    tqdm

[options.extras_require]
macros =
    networkx
    fastparquet
    matplotlib
    SWMM_xsections_shape_generator

gis =
    Shapely
    pyproj
    Rtree
    geopandas
full =
    networkx
    fastparquet
    matplotlib
    SWMM_xsections_shape_generator
    Shapely
    pyproj
    Rtree
    geopandas